--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <!-- Write your HTML here -->
   <table>
     <tr>
-      <th>City</th>
+      <th>City
+        <td></td>
+      </th>
       <th>State</th>
       <th>2017 estimate</th>
     </tr>
     <tr>
-      <td>New York</td>
     </tr>
     <tr></tr>
     <tr></tr>
