Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <table>
     <tr>
       <th>City
-        <td></td>
+        <td>New York</td>
       </th>
       <th>State</th>
       <th>2017 estimate</th>
