--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <!-- Write your HTML here -->
   <table>
     <tr>
-      <th>City
-        <td>New York</td>
-      </th>
+      <th>City</th>
       <th>State</th>
       <th>2017 estimate</th>
     </tr>
