Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </tr>
     <tr>
       <td>Los Angeles</td>
-      <td></td>
+      <td>California</td>
       <td></td>
     </tr>
     <tr></tr>
